# tasks_router

./: .dockerignore  .env.example  .gitignore  .pdm-python  README.md  docker-compose.yaml  dockerfile  lambda_function.py  pyproject.toml  requirements.txt  test.py
alembic/: env.py
alembic/versions/: 2e8af49981bf_final_migration.py  751951f0ac39_another_initialization_of_the_same_.py  899ad83bc79f_initial_migration.py  d8ee742c007c_resolve_migration_heads.py  e5608c27794b_corrected_migration.py
tasks_router/: auth_placeholder.py  dependencies.py  logging_config.py  main.py  services.py  utils.py
tasks_router/database/: config_db.py  initiate_db.py
tasks_router/enums/: ssl_modes.py  task_statuses.py
tasks_router/exceptions/: custom_exceptions.py
tasks_router/infrastructure/: configurations.py  initiate_db.py
tasks_router/middleware/: cors.py
tasks_router/models/: __init__.py  base_model.py  task_model.py  user_model.py
tasks_router/repositories/: task_repo.py  user_repo.py
tasks_router/routers/: system_router.py  task_router.py  user_router.py
tasks_router/schema/: task_base.py  task_create.py  task_response.py  task_schema.py  task_update.py  user_schema.py
tasks_router/services/: task_service.py  user_service.py
tests/: conftest.py  test_app.py  test_config.py  test_database.py  test_dependencies.py  test_main.py  test_negative.py  test_repositories.py  test_routers.py  test_services.py  test_utils.py
