[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "tasks-router"
dynamic = ["version"]
description = "FastAPI application routing request to PostgreSQL DB"
requires-python = ">=3.12"
authors = [
    { name = "Mritesh", email = "adak.mritesh@gmail.com" },
]
readme = "README.md"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "SQLAlchemy>=2.0.49",
    "psycopg[binary]>=3.3.4",
    "alembic>=1.18.4",
    "python-dotenv>=1.2.2"
]
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "black>=26.3.1",
    "isort>=8.0.1",
    "ruff>=0.15.12",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88

[project.scripts]
start = "tasks_router.cli:main"

[tool.setuptools.dynamic]
version = {attr = "tasks_router.__version__"}

[tool.setuptools.packages.find]
include = ["tasks_router*"]

[tool.pdm]
distribution = false