[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "tasks-router"
dynamic = ["version"]
description = "FastAPI application routing request to PostgreSQL DB"
requires-python = ">=3.12"
authors = [
    { name = "Mritesh", email = "adak.mritesh@gmail.com" },
]
readme = "README.md"
dependencies = [
    "fastapi[standard]==0.136.1",
    "SQLAlchemy==2.0.49",
    "python-dotenv==1.2.2",
    "boto3==1.43.6",
    "psycopg2-binary==2.9.12",
    "mangum==0.21.0",
    "structlog==25.5.0",
    "asgi-correlation-id==4.3.4",
    "pytest==9.0.3",
    "black==26.3.1",
    "isort==8.0.1",
    "ruff==0.15.12",
    "alembic==1.18.4"
]
license = {text = "MIT"}

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
select = ["E", "F", "I"]
line-length = 88

[tool.pdm.scripts]
dev = "uvicorn tasks_router.main:app --reload"
lint = "ruff check ."
format = "black ."
test = "pytest -q"

[tool.setuptools.dynamic]
version = {attr = "tasks_router.__version__"}

[tool.setuptools.packages.find]
include = ["tasks_router*"]

[tool.pdm]
distribution = false